<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/tasks_title"
        android:textSize="20sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_facebook_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_facebook" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_get_countries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_countries" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_get_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_contacts" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_show_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_show_stores" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_integrate_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_integration_events" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_share_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_share_photo" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_cache_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_cache_photo" />

</LinearLayout>
